# cinematch

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: README.md  manage.py  pyproject.toml
backend/apps/communities/: models.py  serializers.py  views.py
backend/apps/communities/migrations/: 0001_initial.py  0002_community_icon.py  0003_community_is_public.py  0004_alter_chat_chat_type.py
backend/apps/events/: __init__.py  admin.py  apps.py  initial_data.py  models.py  serializers.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py
backend/apps/movies/: apps.py  models.py  serializers.py  services.py  views.py
backend/apps/movies/management/commands/: populate_movies.py
backend/apps/movies/migrations/: 0001_initial.py  0002_remove_filme_avaliacao_media_and_more.py  0003_forumcomment_filmeuseraction.py  0004_filmeuseraction_assistido_filmeuseraction_avaliacao.py  0005_remove_filmeuseraction_dislike_and_more.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/management/commands/: list_users.py
backend/apps/users/migrations/: 0001_initial.py  0002_userfollow.py  0003_user_avatar_user_banner.py
backend/cinematch/: settings.py  urls.py  wsgi.py
backend/requirements/: base.txt
backend/scripts/: create_comunity.py  fix_database.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.css  index.js  mockdata.json  theme.js
frontend/src/components/: CommunityBase.jsx  Footer.jsx  Header.jsx  LandingHeader.jsx  (+2 more)
(+10 files in other folders)
